--- a/HM3/css/style.css
+++ b/HM3/css/style.css
@@ -92,7 +92,7 @@ body{
     text-align: left;
     margin-top: 20px;
 	margin-left: 320px;
-    line-height: 100% 
+    line-height: 100%;
 	font-size: 13.67px;
 	font-family: 'Myriad Pro';
 	color: #2c2c2c;
