--- a/HM3/css/style.css
+++ b/HM3/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 body{
 	background-color: #f9f9f9;
 }
@@ -9,16 +11,31 @@ body{
 	margin: 0 auto;
 	width: 1000px;
 	height: 850px;
-	border-left: 1.5px solid #dbdbdb;
-	border-right: 1.5px solid #dbdbdb;
+	border-left: 1.5px solid #dbd;
+	border-right: 1.5px solid #dbd;
+    -webkit-box-shadow: 0px -3px 5px 5px rgba(219,219,219,0.84);
+    -moz-box-shadow: 0px -3px 5px 5px rgba(219,219,219,0.84);
+    box-shadow: 0px -3px 5px 5px rgba(219,219,219,0.84);
+ }
+
+.logo{
+	padding-bottom: 40px;
 }
 .menu {
 	
-	background-color: #545454;
+	background: rgba(92,92,92,1);
+    background: -moz-linear-gradient(top, rgba(92,92,92,1) 0%, rgba(92,92,92,1) 0%, rgba(81,81,81,1) 49%, rgba(71,70,70,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(92,92,92,1)), color-stop(0%, rgba(92,92,92,1)), color-stop(49%, rgba(81,81,81,1)), color-stop(100%, rgba(71,70,70,1)));
+    background: -webkit-linear-gradient(top, rgba(92,92,92,1) 0%, rgba(92,92,92,1) 0%, rgba(81,81,81,1) 49%, rgba(71,70,70,1) 100%);
+    background: -o-linear-gradient(top, rgba(92,92,92,1) 0%, rgba(92,92,92,1) 0%, rgba(81,81,81,1) 49%, rgba(71,70,70,1) 100%);
+    background: -ms-linear-gradient(top, rgba(92,92,92,1) 0%, rgba(92,92,92,1) 0%, rgba(81,81,81,1) 49%, rgba(71,70,70,1) 100%);
+    background: linear-gradient(to bottom, rgba(92,92,92,1) 0%, rgba(92,92,92,1) 0%, rgba(81,81,81,1) 49%, rgba(71,70,70,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5c5c5c', endColorstr='#474646', GradientType=0 );
 	
 }
 
 .menu ul {
+   height: 40px;
    margin: 0;
    padding: 0;
    list-style-type: none;
@@ -33,22 +50,25 @@ body{
 .menu ul li a {
 	display: block;
 	padding: 10px 40px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14.67px;
 	text-decoration: none;
 	color: #f9f9f9;
 	
 }
 
 .menu ul li a:hover { 
+	margin: 0 auto;
+	padding: 0 auto;
+	height: 20px;
 	background: #343434;
-	border: 1px solid #a2a2a2;
-}
-
-.menu ul li a:active{
-	border: 1px solid grey;
+	border-left: 1px solid #a2a2a2;
+	border-right: 1px solid #a2a2a2;
 }
 
 .content {
 	float: left;
+	background: #ffffff;
 }
 
 .content ul{
@@ -64,6 +84,8 @@ body{
 .content ul li a{
 	display: block;
 	margin: 10px 0 0 40px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14,67px;
     text-decoration: none;
 	color: #656363;
 }
@@ -91,10 +113,10 @@ body{
 
 .text p {
     text-align: left;
-    margin: 20px 0;
-    line-height: 100%;
+    margin: 35px 0 60px 0;
+    line-height: 21.33px;
 	font-size: 13.67px;
-	font-family: 'Myriad Pro';
+	font-family: 'Open Sans', sans-serif;
 	color: #2c2c2c;
 }
 
@@ -118,6 +140,8 @@ body{
 .menu2 ul li a{
 	display: block;
 	padding: 10px 40px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14,67px;
 	text-decoration: none;
 	color: #2c2c2c;
 }
