--- a/HM3/css/style.css
+++ b/HM3/css/style.css
@@ -11,11 +11,12 @@ body{
 	margin: 0 auto;
 	width: 1000px;
 	height: 850px;
-	border-left: 1.5px solid #dbd;
-	border-right: 1.5px solid #dbd;
-	border-color: -webkit-box-shadow: 0px -4px 5px 2px rgba(219,219,219,0.66);
+	border-left: 1.5px solid -webkit-box-shadow: 0px -4px 5px 2px rgba(219,219,219,0.66);
 -moz-box-shadow: 0px -4px 5px 2px rgba(219,219,219,0.66);
 box-shadow: 0px -4px 5px 2px rgba(219,219,219,0.66);
+	border-right: 1.5px solid -webkit-box-shadow: 0px -4px 5px 2px rgba(219,219,219,0.66);
+-moz-box-shadow: 0px -4px px 2px rgba(219,219,219,0.66);
+box-shadow: 0px 2px 5px 2px rgba(219,219,219,0.66);
 }
 
 .logo{
@@ -43,7 +44,7 @@ box-shadow: 0px -4px 5px 2px rgba(219,219,219,0.66);
 
 .menu ul li {
    display: inline-block;
-   height: 42px;
+   height: 40px;
    margin: 0 auto;
    padding: 0;
 }
@@ -51,11 +52,15 @@ box-shadow: 0px -4px 5px 2px rgba(219,219,219,0.66);
 .menu ul li a {
 	display: block;
 	padding: 10px 40px;
-	height: 39px;
+	margin-top: 1px;
+	height: 20px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14.67px;
 	text-decoration: none;
 	color: #f9f9f9;
+	border-left: 1px solid transparent;
+	border-right: 1px solid transparent;
+
 	
 }
 
@@ -65,7 +70,8 @@ box-shadow: 0px -4px 5px 2px rgba(219,219,219,0.66);
 	text-align: center;
 	height: 20px;
 	background: #343434;
-	outline: 1px solid #838383;
+	border-color: #838383;
+
 }
 
 .content {
@@ -85,7 +91,7 @@ box-shadow: 0px -4px 5px 2px rgba(219,219,219,0.66);
 
 .content ul li a{
 	display: block;
-	margin: 10px 0 0 40px;
+	margin: 13px 0 0 40px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 13.33px;
     text-decoration: none;
