--- a/HM3/css/style.css
+++ b/HM3/css/style.css
@@ -36,24 +36,18 @@ box-shadow: 0px 2px 5px 2px rgba(219,219,219,0.66);
 }
 
 .menu ul {
-   height: 40px;
-   margin: 0;
-   padding: 0;
+   height: 36px;
    list-style-type: none;
 }
 
 .menu ul li {
    display: inline-block;
-   height: 40px;
-   margin: 0 auto;
-   padding: 0;
 }
 
 .menu ul li a {
 	display: block;
 	padding: 10px 40px;
 	margin-top: 1px;
-	height: 20px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14.67px;
 	text-decoration: none;
@@ -65,10 +59,6 @@ box-shadow: 0px 2px 5px 2px rgba(219,219,219,0.66);
 }
 
 .menu ul li a:hover { 
-	margin: 0 auto;
-	padding: 0 auto;
-	text-align: center;
-	height: 20px;
 	background: #343434;
 	border-color: #838383;
 
@@ -85,6 +75,8 @@ box-shadow: 0px 2px 5px 2px rgba(219,219,219,0.66);
 }
 .content ul li {
 	 border: 1px #c8c8c8 solid;
+	 border-bottom: none;
+	 border-collapse: collapse;
 	 width: 240px;
 	 height: 40px;
 }
@@ -96,6 +88,9 @@ box-shadow: 0px 2px 5px 2px rgba(219,219,219,0.66);
 	font-size: 13.33px;
     text-decoration: none;
 	color: #656363;
+}
+.content ul li:last-child{
+	border-bottom: 1px #c8c8c8 solid;
 }
 
 .content ul li:hover{
@@ -137,14 +132,11 @@ box-shadow: 0px 2px 5px 2px rgba(219,219,219,0.66);
 
 .menu2 ul{
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+  
 }
 
 .menu2 ul li{
-    display: inline-block;
-    margin: 0;
-    padding: 0;    
+    display: inline-block;  
 }
 
 .menu2 ul li a{
